tests/golden/error/private_fn_access/helper.tg
// Module with private and public functions.

fn private_fn() -> Nat { 42 }

pub fn public_fn() -> Nat { 0 }
